--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     >
       Restart Game
     </button>
-    <div id="arrow-buttons">
+    <div id="controls" style="text-align: center; margin-top: 20px;">
+
       <div>
         <button class="arrow-btn" onclick="changeDirectionByButton('up')">
           ▲
