--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
         font-size: 140px;
         font-family: "Antic Slab", serif;
       }
+      @media (max-width: 600px) {
+      #arrow-buttons {
+        font-size: 18px;
+      }
+      #score {
+        font-size: 8vw; /* Adjust font size for smaller screens */
+      }
+      #gameCanvas {
+        width: 80vw;
+        height: auto;
+      }
+    }
     </style>
   </body>
 
